# clozr

./: .gitignore  .prettierrc  CHANGELOG.md  ONBOARDING.md  README.md  eslint.config.js  index.html  knip.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
.claude/skills/clozr-ai-triage/: SKILL.md
.claude/skills/clozr-feature/: SKILL.md
.claude/skills/clozr-multitenant-audit/: SKILL.md
.claude/skills/clozr-release/: SKILL.md
.github/workflows/: build.yml  deploy-worker.yml  verify.yml
.next/: trace  trace-build
.next/cache/: .previewinfo  .rscinfo
.next/types/: routes.d.ts  validator.ts
cf-worker/: BILLING-GOLIVE.md  README.md  RESTORE_BACKUP.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
cf-worker/src/: aiWallet.ts  auth.ts  catalog.ts  codes.ts  discounts.ts  dolar.ts  email.ts  index.ts  jwt.ts  permissions.ts  permissionsWs.ts  schema.ts  superadmin.ts  turso.ts
cf-worker/src/cron/: aiTriage.ts  backup.ts  dunning.ts  planDowngrade.ts  reprice.ts
cf-worker/src/routes/: _generic.ts  ai-chat.ts  appointmentTypes.ts  appointments.ts  assigned-tasks.ts  billing.ts  cash-sessions.ts  catalog-repairs.ts  catalog-stock.ts  catalogPrices.ts  console.ts  customRoles.ts  customer-contacts.ts  customers.ts  errors.ts  google.ts  homeLayouts.ts  me.ts  origins.ts  pipeline.ts  repairs.ts  request.ts  rolePermissions.ts  sales.ts  settings.ts  simpleTables.ts  verify-code.ts  verify.ts  workspace-assets.ts  workspaces.ts
docs/: ARCHITECTURE.md  ROADMAP.md
public/: site.webmanifest
scripts/: bump-version.mjs  release.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.staging.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 002_catalog.sql  003_pipeline_stages.sql  004_customer_types.sql  007_catalog_custom_fields.sql  009_images.sql  011_businesses.sql  013_exchange_rate.sql  014_product_templates.sql  015_product_templates_image.sql  016_quick_stock.sql  017_stock_sold_to.sql  018_airpods_variants.sql  019_customer_contacts.sql  020_cash_day_sessions.sql  021_pipeline_extended.sql  025_stock_pricing.sql  027_user_auth.sql
src-tauri/migrations-archive/: 001_initial.sql  005_catalog_categories.sql  006_tasks_custom_days.sql  008_users_extended.sql  010_product_condition.sql  012_cash_followups.sql  022_sales_payment_method.sql  023_payment_methods.sql  024_catalog_pricing.sql  README.md
src-tauri/src/: main.rs  turso_spike.rs
src/components/: Avatar.tsx  BottomSheet.tsx  Button.tsx  Card.tsx  CollectPaymentModal.tsx  CommandPalette.tsx  ContextMenu.tsx  CustomerWaQuickPicker.tsx  DateTimePicker.tsx  Drawer.tsx  ErrorBoundary.tsx  ExchangeRateChip.tsx  Modal.tsx  PageHeader.tsx  SidePanel.tsx  Skeleton.tsx  SplashScreen.tsx  Tabs.tsx  TagChip.tsx  TipsModal.tsx  Toaster.tsx  Topbar.tsx  UndoToastHost.tsx  WaQuickPicker.tsx  WhatsNewModal.tsx  index.ts
src/components/data-table/: DataTable.tsx  RowActions.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  DatePicker.tsx  ImageUpload.tsx  Input.tsx  Select.tsx  WorkspaceAssetUpload.tsx
src/components/wa-picker/: parts.tsx
src/dev/: tursoSpike.ts
src/features/: MoreDrawer.tsx
src/features/auth/: LoginScreen.tsx
src/features/cash/: CashScreen.tsx
src/layout/: AppShell.tsx  Sidebar.tsx  Topbar.tsx
src/lib/: backup.ts  cloudAuth.ts  clozrTips.ts  colorPalette.ts  constants.ts  currency.ts  dolaresAr.ts  entitlements.ts  exportCsv.ts  followupTemplates.ts  format.test.ts  format.ts  groupings.test.ts  groupings.ts  hooks.ts  images.ts  logger.ts  mappers.test.ts  mappers.ts  notifications.ts  openExternal.ts  parseVCard.ts  permissions.test.ts  permissions.ts  pricing.test.ts  pricing.ts  queryKeys.ts  releaseNotes.ts  stageFollowups.ts  updater.ts  useCloudAuthListener.ts  useCloudPolling.ts  useDailyGoal.ts  useGlobalShortcuts.ts  useIndustry.ts  usePersistedState.ts  useShouldShowTip.ts  useSyncCloudRole.ts  useTaskVisibilityFilter.ts  useUserActivity.ts  (+4 more)
src/mock/: cash.ts  clients.ts  leads.ts  myDay.ts  sales.ts
src/pages/: CustomersPage.tsx  HomePage.tsx  MorePage.tsx  PipelinePage.tsx  TasksPage.tsx
src/store/: authStore.ts  businessStore.ts  cloudAuthStore.ts  exchangeRateStore.ts  themeStore.ts  uiStore.ts  useDolaresAr.ts  useUndoableActions.ts  workspaceStore.ts
src/styles/: globals.css
src/tokens/: index.ts  tokens.css
src/types/: domain.ts
(+145 files in other folders)
