[package]
name = "clozr"
version = "1.3.21"
description = "Clozr — CRM de escritorio"
authors = []
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-opener = { version = "2" }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Spike Fase 0 — validar libsql embedded replica + sync con Turso cloud.
# Si esto buildea limpio en Windows y un test command funciona, seguimos
# con el reemplazo completo de tauri-plugin-sql. Si falla, pivoteamos.
# remote = HTTP client, replication = embedded replica con sync.
libsql = { version = "0.6", default-features = false, features = ["core", "remote", "replication"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
