[package]
name = "clozr"
version = "1.3.21"
description = "Clozr — CRM de escritorio"
authors = []
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-opener = { version = "2" }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Spike Fase 0 — PIVOT 2: HTTP directo via reqwest.
#
# Histórico de intentos:
#  1. libsql 0.6 full (core + remote + replication) → libsql-ffi falla
#     en Windows con "program not found" incluso con MSVC + LLVM.
#  2. libsql 0.6 remote-only → libsql-sys usa API Unix-only
#     (OsStr::as_bytes) que en Windows ni compila.
#  3. (acá) reqwest contra el endpoint Turso `/v2/pipeline` → puro Rust
#     sin native deps, garantizado Windows. Misma capacidad funcional
#     (auth + query + multi-PC) pero perdemos la API "se siente SQLite"
#     que da el SDK libsql.
#
# Trade-offs aceptados:
#  - SIN réplica embedded local — cada query es 1 HTTP a Turso. Latencia
#    ~400ms desde AR. Cuando esto sea problema, evaluar (a) bundlear
#    sqlite local y sync nosotros, (b) revisar versiones nuevas libsql,
#    (c) seguir con HTTP puro si la latencia es aceptable.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
